--- a/academy/templates/academy/create_post.html
+++ b/academy/templates/academy/create_post.html
@@ -27,9 +27,9 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
-                <form action="{% url 'create_post' %}" method="POST" enctype="multipart/form-data">
+                <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {% for field in post_form %}
+                    {% for field in form %}
                     {% if field.name != 'blog_image' %}
                     {{ field | as_crispy_field }}
                     {% else %}
