--- a/academy/templates/academy/delete_post.html
+++ b/academy/templates/academy/delete_post.html
@@ -21,7 +21,7 @@
                 <div col-md-8 offset-md-2>
                     <form action="{% url 'delete_post' post.slug %}" method="POST">
                         {% csrf_token %}
-                        <p class="mb-3">Are you sure you want to delete the post "{{ post.header }}"?</p>
+                        <p class="mb-3">Are you sure you want to delete the post "{{ post.title }}"?</p>
                         <p></p>
                         <a href="{% url 'academy' %}" class="btn_1 text-white">Cancel</a>
                         <input type="submit" class="btn_1" value="Confirm"></input>
