--- a/academy/templates/academy/post_detail.html
+++ b/academy/templates/academy/post_detail.html
@@ -20,24 +20,21 @@
 <section class="blog_area section_padding">
     <div class="container">
         <div class="row">
-            
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div class="blog_left_sidebar">
                     <article class="blog_item">
                         <div class="blog_item_img">
                         {% if post.blog_image %}
-                        
-                            <img class="card-img rounded-0" src="{{ post.blog_image.url }}" alt="{{ post.header }}">
+                            <img class="card-img rounded-0" src="{{ post.blog_image.url }}" alt="{{ post.title }}">
                         {% endif %}
                             <a href="#" class="blog_item_date">
                                 <h3>{{ post.date_created | date:"d" }}</h3>
                                 <p class="text-white">{{ post.date_created | date:"M" }}</p>
                             </a>
                         </div>
-
                         <div class="blog_details">
                             <a class="d-inline-block" href="#">
-                                <h2>{{ post.header }}</h2>
+                                <h2>{{ post.title }}</h2>
                             </a>
                             {% if post.category %}
                             <p><a href="{% url 'academy' %}?category={{ post.category.name }}"
