--- a/academy/templates/academy/update_post.html
+++ b/academy/templates/academy/update_post.html
@@ -26,9 +26,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-6 order-lg-last mb-5">
+        <div class="col-12 col-lg-8 order-lg-last mb-5">
             <form action="{% url 'update_post' post.slug %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
+                {{ form.media }}
                 {% for field in form %}
                     {% if field.name != 'blog_image' %}
                         {{ field | as_crispy_field }}
