--- a/academy/templates/academy/post_detail.html
+++ b/academy/templates/academy/post_detail.html
@@ -67,17 +67,34 @@
                             <div>
                             <hr class="dropdown-divider">
                         </div>
-                        <h3>Comments ...</h3>
-                        {% if not post.comments.all %}
-                        <p>Add first comment!</p>
+                        {% if new_comment %}
+                        <p class="text-muted mb-3 mt-3 approval-bg">Your comment is awaiting approval ...</p>
                         {% else %}
-                        {% for comment in post.comments.all %}
-                        <strong>{{ comment.name }}</strong>
-                        <p>{{ comment.date_added }}</p>
-                        <p>{{ comment.commenttext }}</p>
-                        {% endfor %}
+                        <p>
+                            <button class="btn_1" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                              Leave a comment
+                            </button>
+                          </p>
+                          <div class="collapse" id="collapseExample">
+                            <div class="card card-body">
+                                <form action="" method="POST">
+                                    {% csrf_token %}
+                                    {{ comment_form | crispy }}
+                                    <button type="submit" class="btn_1">Submit</button>
+                                </form>
+                            </div>
+                          </div>
+                        
                         {% endif %}
-                        <button class="btn_1">Add comment</button>
+                        {% for comment in comments %}
+                        <div class="card w-100">
+                            <div class="card-body">
+                              <h5 class="card-title">{{ comment.name }}</h5>
+                              <p class="card-text">{{ comment.commenttext | linebreaks }}</p>
+                              <div class="card-footer bg-transparent text-muted text-right">{{ comment.date_added }}</div>
+                            </div>
+                          </div>
+                        {% endfor %}
                     </article>
                 </div>
             </div>
@@ -124,16 +141,12 @@
 
 {% endblock %}
 
-<!-- {% block postloadjs %}
+{% block postloadjs %}
 {{ block.super }}
-<script>
-    $(document).on('click', '.confirm-delete', function () {
-        return confirm('Are you sure you want to delete the painting?');
-    })
-</script>
+
 <script>
     $('.btt-link').click(function (e) {
         window.scrollTo(0, 0)
     })
 </script>
-{% endblock %} -->
+{% endblock %}
