Create contact app, add models, forms, views and template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -40,88 +40,36 @@
 <!-- Reviews Heading End -->
 <!-- Review Slider Start -->
 {% include 'includes/slider.html' %}
+<hr>
 <!-- Review Slider End -->
-<!-- Subscribe Part Start -->
-<section class="subscribe_part section_padding">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="subscribe_part_content">
-                    <div id="mc_embed_shell">
-                        <div id="mc_embed_signup">
-                            <div class="subscribe_form">
-                                <h2>Subscribe to our Newsletter!</h2>
-                                <form
-                                    action="https://herokuapp.us21.list-manage.com/subscribe/post?u=88090f70b333bca43697bfe49&amp;id=70e54690fe&amp;f_id=0012f2e6f0"
-                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                    class="validate" target="_blank">
-                                    <div id="mc_embed_signup_scroll">
-                                        <div class="mc-field-group">
-                                            <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
-                                                required="" value="" placeholder="Enter your Email address">
-                                        </div>
-                                        <div id="mce-responses" class="clear foot">
-                                            <div class="response" id="mce-error-response" style="display: none;">
-                                            </div>
-                                            <div class="response" id="mce-success-response" style="display: none;">
-                                            </div>
-                                        </div>
-                                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                            /* real people should not fill this in and expect good things - do not
-                                            remove this or risk form bot signups */
-                                            <input type="text" name="b_88090f70b333bca43697bfe49_70e54690fe"
-                                                tabindex="-1" value="">
-                                        </div>
-                                        <div class="optionalParent">
-                                            <div class="clear foot">
-                                                <input type="submit" name="subscribe"
-                                                    aria-label="Subscribe to newsletter" id="mc-embedded-subscribe"
-                                                    class="button btn_3" value="Subscribe">
-                                                <p>Powered by:</p>
-                                                <p></p>
-                                                <a href="http://eepurl.com/iIUFVE"
-                                                    title="Mailchimp - email marketing made easy and fun"
-                                                    target="_blank" rel="noopener"
-                                                    aria-label="Visit our Newsletter cooperation partner Mailchimp"></a>
-                                                <span>
-                                                    <img class="refferal_badge"
-                                                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg"
-                                                        alt="Intuit Mailchimp">
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Subscribe Part End -->
 <!-- Footer part start -->
 <footer class="footer_part">
     <div class="footer_iner">
         <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-6">
+            <div class="row justify-content-between">
+                <div class="col-12 col-md-4">
                     <div>
                         <p class="text-uppercase font-weight-bold">Hanneles Art</p>
                         <p>Gallery & Academy</p>
                         <p>Tavlavägen 123</p>
                         <p>SE-123 45 Gävle</p>
-                        <p><i class="fa-solid fa-phone"></i>  076-555 00 007</p>
-                        <p><i class="fa-regular fa-envelope"></i>  info@hanneles.com</p>
                     </div>
                 </div>
-                <div class="col-6">
-                    <div class="social_icon float-right px-2">
-                        <a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook"
-                            target="_blank" rel="noopener"><i class="fab fa-facebook-f px-10"></i></a>
-                        <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank"
-                            rel="noopener"><i class="fab fa-instagram px-2"></i></a>
+                <div class="col-12 col-md-4">
+                    <div>
+                        <p class="text-uppercase font-weight-bold">Contact us</p>
+                        <p><i class="fa-solid fa-phone fa-lg pr-2"></i>076-555 00 007</p>
+                        <p><i class="fa-regular fa-envelope fa-lg pr-2"></i>info@hanneles.com</p>
+                        <p><i class="fa-solid fa-at fa-lg pr-2"></i>Contact form</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div>
+                        <p class="text-uppercase font-weight-bold">Follow us</p>
+                        <p><a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook"
+                            target="_blank" rel="noopener"><i class="fab fa-facebook-f fa-lg pr-2"></i>Facebook</a></p>
+                        <p><a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank"
+                            rel="noopener"><i class="fab fa-instagram fa-lg pr-2"></i>Instagram</a></p>
                     </div>
                 </div>
             </div>
