--- a/static/css/base.css
+++ b/static/css/base.css
@@ -398,9 +398,9 @@ i {
 .icon-md {
     font-size: 1.2rem;
 }
-
+/* 
 /* Mailchimp subscription form  */
-.subscribe_form_mailchimp {
+/* .subscribe_form_mailchimp {
     margin: 0 auto;
     margin-top: 45px;
     position: relative;
@@ -455,7 +455,7 @@ i {
 .subscribe_part .subscribe_part_content p {
     color: #fff !important;
     font-size: 12px;
-}
+} */
 
 /* Privacy Policy */
 .btn-link {
@@ -488,56 +488,8 @@ h5 {
     padding-left: 10px;
 }
 
-/* Blog Area */
-.blog-container {
-    height: 250px;
-    margin: auto;
-}
-.card-img, .card-img-bottom, .card-img-top {
-    -ms-flex-negative: 0;
-    /* flex-shrink: 0; */
-    width: auto !important;
-    display: block !important;
-    max-height: 100% !important;
-}
-.single_product_item_thumb img {
-    width: auto !important;
-    display: block !important;
-    max-height: 100% !important;
-}
-.blog-img-fluid {
-    max-width: 100%;
-    height: 250px;
-}
-.blog_area .blog_button a {
-    color: #fff !important;
-    text-decoration: none;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-}
-.introtext {
-    min-height: 100px;
-}
-.introtext p {
-    font-size: 16px !important;
-}
-input .btn_1:hover {
-    color: #4B3049;
-}
-.btn-like {
-    border-radius: 10px;
-    border: 1px solid #795376;
-    color: #795376;
-}
-.approval-bg {
-    border-radius: 10px;
-    background-color: #B08EAD;
-    color: #fff !important;
-    font-size: 1.2rem;
-    padding: 10px;
-}
-@media (max-width: 576px) {
-    .blog-container {
-        height: 100%;
-    }
-}
+#char-count {
+    float: right;
+    padding: 0.1rem 0 0 0;
+    font-size: 0.875rem;
+  }
