--- a/static/css/base.css
+++ b/static/css/base.css
@@ -398,64 +398,6 @@ i {
 .icon-md {
     font-size: 1.2rem;
 }
-/* 
-/* Mailchimp subscription form  */
-/* .subscribe_form_mailchimp {
-    margin: 0 auto;
-    margin-top: 45px;
-    position: relative;
-    max-width: 558px;
-}
-.subscribe_form_mailchimp > input {
-    border: 1px solid #fff;
-    width: 100%;
-    background-color: transparent;
-    color: #fff;
-    border-radius: 50px;
-    padding: 19px 30px;
-    line-height: 20px;
-}
-.subscribe_form_mailchimp > btn_1 {
-    width: 50%;
-    padding: 15px 30px;
-    line-height: 16px;
-    border-radius: 50px;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-}
-.refferal_badge {
-    width: 220px; 
-    height: 40px; 
-    display: flex;
-    padding: 2px 0px; 
-    justify-content: center; 
-    align-items: center;
-    display: inline-block; 
-    background-color: transparent; 
-    border-radius: 4px;
-}
-#mc-embedded-subscribe {
-    display: inline-block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    max-width: 150px;
-    border-radius: 50px;
-    background-color: #B08EAD;
-    border: 0;
-    font-size: 15px;
-    font-weight: 400;
-    transition: 0.5s;
-    text-transform: capitalize;
-}
-#mc-embedded-subscribe:hover {
-    background-color: #fff;
-    color: #795376;
-}
-.subscribe_part .subscribe_part_content p {
-    color: #fff !important;
-    font-size: 12px;
-} */
 
 /* Privacy Policy */
 .btn-link {
@@ -488,8 +430,12 @@ h5 {
     padding-left: 10px;
 }
 
+/* Contact form */
 #char-count {
     float: right;
     padding: 0.1rem 0 0 0;
     font-size: 0.875rem;
-  }
+}
+.form-control {
+    font-size: 1rem !important;
+}
