--- a/newsletter/templates/newsletter/mailcontent.html
+++ b/newsletter/templates/newsletter/mailcontent.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<!-- Breadcrumb part start -->
 <section class="breadcrumb_part">
     <div class="container">
         <div class="row">
@@ -14,7 +15,7 @@
     </div>
 </section>
 <!-- Breadcrumb part end-->
-
+<!-- Create Newsletter part start -->
 <section class="cart_area section_padding">
     <div class="container">
         <div class="row">
@@ -24,7 +25,7 @@
                 <form action="{% url 'mail_content' %}" method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <div class="checkout_btn_inner float-right">
+                    <div class="float-right my-3">
                         <a class="btn_1 text-white" href="{% url 'home' %}">Cancel</a>
                         <button id="submit-button" class="btn_1" aria-label="Send Newsletter">Send</button>
                     </div>
@@ -33,5 +34,5 @@
         </div>
     </div>
 </section>
-
+<!-- Create Newsletter Part End -->
 {% endblock %}
