--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,7 +9,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <h2>Original Art by Hannele</h2>
-                    <h3>Buy real paintings for home decoration</h3>
+                    <h3 class="text-white">Buy real paintings for home decoration</h3>
                 </div>
             </div>
         </div>
