--- a/static/sass/_breadcrumb.scss
+++ b/static/sass/_breadcrumb.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #B08EAD;
+	background-color: #795376;
 	.breadcrumb_iner {
 		text-align: center;
 		h2 {
