--- a/static/sass/_client_review.scss
+++ b/static/sass/_client_review.scss
@@ -1,7 +1,7 @@
 .client_review{
     padding: 100px 0;
     text-align: center;
-    background-color: #B08EAD;
+    background-color: #795376;
     position: relative;
     @media #{$tab} {
         padding: 70px 0;
