--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -2,7 +2,7 @@ $font_stack_1: 'Rubik', sans-serif;
 $font_stack_2: 'Poppins', sans-serif;
 /*Color Variables*/
 
-$primary-color  : #B08EAD;
+$primary-color  : #795376;
 $title-color    : #2a2a2a;
 $text-color     : #795376;
 $offwhite       : #f6f6f6;
@@ -19,8 +19,8 @@ $color_1: #f8fbff;
 $color_2: #fffbf9;
 $color_3: #fafafa;
 $color_4: #fffcf4;
-$btn_bg: #B08EAD;
-$primary_color: #B08EAD;
+$btn_bg: #795376;
+$primary_color: #795376;
 $btn_hover: #f5790b;
 $section_bg_1: #e8f0f2;
 $heading_color: #4B3049;
