--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -48,7 +48,7 @@
                                 </a>
                                 <div class="dropdown-menu" id="navbarDropdown_2">
                                     {% if request.user.is_authenticated %}
-                                    <p class="dropdown-item welcome text-muted">Welcome back, {{ user.username }}!</p>
+                                    <p class="dropdown-item welcome">Welcome back, {{ user.username }}!</p>
                                     <div class="dropdown-divider"></div>
                                     {% if request.user.is_superuser %}
                                     <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
