--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -8,7 +8,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <h2>Hanneles Art Gallery</h2>
-                    <h3>Delete product</h3>
+                    <h3 class="text-white">Delete product</h3>
                 </div>
             </div>
         </div>
