--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -6,18 +6,20 @@
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+{% block inner_content %}
+<p></p>
+<h2>{% trans "Confirm E-mail Address" %}</h2>
+<hr>
 
 {% if confirmation %}
 
 {% user_display confirmation.email_address.user as user_display %}
 
 <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-
+<p></p>
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button type="submit" class="btn_3">{% trans 'Confirm' %}</button>
+    <button type="submit" class="btn_1 mt-3">{% trans 'Confirm' %}</button>
     
 </form>
 
