--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,7 +1,6 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
@@ -10,24 +9,12 @@
 <h2>{% trans "Sign In" %}</h2>
 <hr>
 
-{% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
@@ -40,8 +27,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="primaryAction btn_3" type="submit">{% trans "Sign In" %}</button>
-  <a class="btn_3" href="{% url 'home' %}">Home</a>
+  <button class="primaryAction btn_1" type="submit">{% trans "Sign In" %}</button>
+  <a class="btn_1 text-white" href="{% url 'home' %}">Home</a>
   <a class="signin-lost_pass" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   
 </form>
