--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -16,8 +16,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btn_3" type="submit">{% trans 'Sign Out' %}</button>
-  <a class="btn_3" href="{% url 'home' %}">Home</a>
+  <button class="btn_1" type="submit">{% trans 'Sign Out' %}</button>
+  <a class="btn_1 text-white" href="{% url 'home' %}">Home</a>
 </form>
 
 
