Add login required to create newsletter view, replace placeholders with labels on profile page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -336,6 +336,9 @@ i {
 	background-color: #795376;
 	color: #fff;
 }
+.text-info {
+    color: #795376 !important;
+}
 @media  (max-width: 576px) {
     .message-container {
         width: 280px;
