--- a/home/templates/home/reviews.html
+++ b/home/templates/home/reviews.html
@@ -9,7 +9,7 @@
       <div class="col-lg-12">
         <div class="breadcrumb_iner">
           <h2>What our customers say</h2>
-          <h3>Average customer rating: {{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
+          <h3 class="text-white">Average customer rating: {{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
         </div>
       </div>
     </div>
