--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -48,7 +48,7 @@
                                 <th>Order Number</th>
                                 <th>Date</th>
                                 <th>Painting Title</th>
-                                <th>Order Total</th>
+                                <th class="float-right mr-2">Order Total</th>
                             </tr>
                         </thead>
                         <tbody>
