--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -19,7 +19,9 @@
 <!--Cart Area start -->
 <section class="cart_area section_padding">
   <div class="container">
-    <div class="cart_inner">
+    <div class="row">
+      <div class="col-12">
+            <div class="cart_inner">
       {% if cart_items %}
       <div class="table-responsive">
         <table class="table">
@@ -110,6 +112,8 @@
       {% endif %}
     </div>
   </div>
+      </div>
+    </div>
   </section>
 <!--Cart Area end -->
 {% endblock %}
