--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -10,16 +10,8 @@
 <hr>
 
 
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-
-{% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
@@ -27,7 +19,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="primaryAction btn_1" type="submit">{% trans "Sign In" %}</button>
+  <button class="btn_1" type="submit">{% trans "Sign In" %}</button>
   <a class="btn_1 text-white" href="{% url 'home' %}">Home</a>
   <a class="signin-lost_pass" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   
