--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -11,7 +11,7 @@
     <div class="toast-body">
       <div class="row">
         <div class="col">
-          {{ message }}
+          {{ message|linebreaksbr }}
         </div>
       </div>
     </div>
