Correct html error after validation, update erd in readme

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -60,7 +60,7 @@
                         <p class="text-uppercase font-weight-bold">Contact us</p>
                         <p><i class="fa-solid fa-phone fa-lg pr-2"></i>076-555 00 007</p>
                         <p><i class="fa-regular fa-envelope fa-lg pr-2"></i>info@hanneles.com</p>
-                        <p><a href="{% url 'contact' %}" aria-label="Contact us"><i class="fa-solid fa-at fa-lg pr-2"></i>Contact form</p></a>
+                        <p><a href="{% url 'contact' %}" aria-label="Contact us"><i class="fa-solid fa-at fa-lg pr-2"></i>Contact form</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
