--- a/newsletter/templates/newsletter/subscribe.html
+++ b/newsletter/templates/newsletter/subscribe.html
@@ -20,9 +20,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5 mx-auto">
-                <p class="text-muted">
+                <div class="text-muted">
                 <h5 id="h5-padding">Enter a valid email address:</h5>
-                </p>
+                </div>
                 <form action="{% url 'subscribe' %}" method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
