--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -22,11 +22,11 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_1" role="button"
+                                <a class="nav-link dropdown-toggle" href="" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Art Gallery
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                                <div class="dropdown-menu" id="navbarDropdown_1">
                                     <a class="dropdown-item" href="{% url 'products' %}">All Paintings</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=flowers">Flowers</a>
@@ -42,7 +42,7 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3" role="button"
+                                <a class="nav-link dropdown-toggle" href="" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     My Account
                                 </a>
@@ -62,11 +62,11 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_3" role="button"
+                                <a class="nav-link dropdown-toggle" href="" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Newsletter
                                 </a>
-                                <div class="dropdown-menu" id="navbarDropdown_2">
+                                <div class="dropdown-menu" id="navbarDropdown_3">
                                     <a href="{% url 'subscribe' %}" class="dropdown-item">Subscribe</a>
                                     {% if request.user.is_superuser %}
                                     <div class="dropdown-divider"></div>
@@ -80,7 +80,8 @@
                         <form class="search-form" method="GET" action="{% url 'products' %}">
                             <input type="text" class="search-input" name="q" placeholder="Search..."
                                 aria-label="Search">
-                            <button class="search-button" type="submit" aria-label="Search"><i class="fas fa-search"></i></button>
+                            <button class="search-button" type="submit" aria-label="Search"><i
+                                    class="fas fa-search"></i></button>
                         </form>
                     </div>
                     <span>
