--- a/templates/includes/slider.html
+++ b/templates/includes/slider.html
@@ -1,4 +1,4 @@
-<section class="p-2">
+<div class="p-2">
   <div class="container mb-2">
     <div class="row">
       <div class="col-md-12">
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 {% block carousel%}
 <script>
 $(document).ready(function () {
