Code clean-up in css files

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -33,6 +33,7 @@
                     {% csrf_token %}
                     {{ form|crispy }}
                     <div class="checkout_btn_inner float-right">
+                        <a class="btn_1 text-white" href="{% url 'home' %}">Cancel</a>
                         <button id="submit-button" class="btn_1" aria-label="Update profile">Update Profile</button>
                     </div>
                 </form>
