--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -80,11 +80,10 @@
             <div class="row ">
                 <div class="col-lg-12">
                     <div class="copyright_text">
-                        <P>
+                        <P id="ccright">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
                             <script>
-                                document.write(new Date().getFullYear());
+                                document.getElementById("ccright").innerHTML="Copyright &copy; " + new Date().getFullYear();
                             </script> All rights reserved | This template is made with <i class="ti-heart"
                                 aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
                                 rel="noopener">Colorlib</a>
@@ -102,30 +101,7 @@
 </footer>
 <!-- Footer part end -->
 {% endblock %}
-{% block mailchimpjs %}
-<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-<script type="text/javascript">
-    (function ($) {
-        window.fnames = new Array();
-        window.ftypes = new Array();
-        fnames[0] = 'EMAIL';
-        ftypes[0] = 'email';
-        fnames[1] = 'FNAME';
-        ftypes[1] = 'text';
-        fnames[2] = 'LNAME';
-        ftypes[2] = 'text';
-        fnames[3] = 'ADDRESS';
-        ftypes[3] = 'address';
-        fnames[4] = 'PHONE';
-        ftypes[4] = 'phone';
-        fnames[5] = 'BIRTHDAY';
-        ftypes[5] = 'birthday';
-    }(jQuery));
-    var $mcj = jQuery.noConflict(true);
-</script>
-
-{% endblock %}
-{% block caroouseljs %}
+{% block carouseljs %}
 <script type="text/javascript">
     $('.collapse').collapse()
 </script>
