--- a/static/css/base.css
+++ b/static/css/base.css
@@ -404,6 +404,10 @@ i {
     border: 0 !important;
     box-shadow: none !important;
 }
+.card-title {
+    font-size: 1rem;
+    font-weight: 500;
+}
 .icon-md {
     font-size: 1.2rem;
 }
